@@ -1,4 +1,6 @@
+DIST spice-0.5.3.tar.bz2 1187585 RMD160 e4cd8750c548188a76c2ef77e71b61fb0004567b SHA1 17d2a4a1547d69be9c9992e7058898dd0a53d646 SHA256 a1bdb2d731c5dbbf2582e1a88de4042b1199911172c8f178d912c375178306f2
 DIST spice_0_4.tar.bz2 471285 RMD160 3ae6be3ddfbdfe910ac1f4dc4b37cc2ea9d6b1b1 SHA1 9d3742bff82ebaffd50e9037206254734cc0becc SHA256 8efaf63d242077ffe814ae50a69253a59968ea6cd78d1ec42c9e3e857ae33390
 EBUILD spice-0.4.ebuild 993 RMD160 fe46e32fe12180079833207dbf00a779f9d4d6fd SHA1 185f6581ce92cf966f459a1ddc0afaa084daa7ee SHA256 8519c9ef183462a48d8068e1f48f86c07b61072c0cb047f795957d1581dd4d64
-MISC ChangeLog 262 RMD160 5cdd4c405cfd56a7a4b459af5cb424c256903156 SHA1 e284ceb307438c8da99a42fb5a8383918d9c260e SHA256 a4f40f8a496934ed9e51573ca78d1c9c4d6b1fd2a74e23657b3beade3728459f
+EBUILD spice-0.5.3.ebuild 996 RMD160 81bd9c308b26e8cd8e55b19394b1488603714ee7 SHA1 f97ca8e51af6498dda4ef08cf7474aba92eda2cd SHA256 d257b83edc8bf9697d01518c4c1b349efe5e7bbb3b91ec995f382223331d3888
+MISC ChangeLog 365 RMD160 c0c079a1791119a6e922addbb25c5443bf4e142e SHA1 551d8a62594c91b7f5db8a4a14be288ffe2b7f34 SHA256 201dcdc3d8e70b3c24bf96acfab2d9c4a12aeb9aed50e37bb7a37e78e9b6ffaf
 MISC metadata.xml 705 RMD160 442ddd05476f37c79da8f420922e8d25a0897e67 SHA1 8f45180ae6fa820642404bb3834947d19244d448 SHA256 fe5adc20eb1f51dd4ea8ecd8bc5cdde223361fa252038f5c2638dcc0ce47b5e5
