@@ -1,26 +1,10 @@
-# 22  Mar 2010;A. Vinogradov <spamslepnoga@inbox.ru>
-# mask for testing
-www-apps/webgui
-
-# 18 Mar 2010;A. Vinogradov <spamslepnoga@inbox.ru>
-# upstream bug
-www-apps/rtpg
+# 1 Aug 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+# compile fail
+=app-emulation/spice-0.5*
 
 # 4  Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
 # Not work && build
-app-crypt/pki-ra
-app-admin/pki-console
-app-crypt/pki-tps
-app-crypt/pki-ca
 app-emulation/libguestfs
-
-# 1 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
-# depend is profile masked
-=sys-app/yum-3.2.25
-
-# 31  Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
-# not tested
-~dev-util/febootstrap-2.6
 
 # 11 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
 # mask for testing - not comlete
